# sys-arch-client

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini
cafe/: cafe.py  cafeteria.py  customer.py  menu.py  order.py
cafe/tests/: test_cafe.py  test_customer.py  test_order.py
iterator/: ArrayList.py  ArrayListIterator.py  Collection.py  IteratorInterface.py  collection.py  iterator.py  main.py
iterator/tests/: test_iterator.py
src/: file_manager.py  main.py  server_api.py  states.py  strategies.py  utils.py
src/api/: __init__.py  factory.py
src/api/methods/: __init__.py  abstract.py  get.py  post.py
src/states/: __init__.py  exit.py  login.py  main.py  previous.py
src/strategies/: __init__.py  download.py  login.py  upload.py
